<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Menu" >

    <TextView
        android:id="@+id/menuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:gravity="center_horizontal"
        android:text="@string/menuTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ff0000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/changemode"
        android:layout_width="200sp"
        android:layout_height="60sp"
        android:layout_alignLeft="@+id/retry"
        android:layout_below="@+id/retry"
        android:layout_marginTop="25dp"
        android:text="@string/changeMode"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/newcategory"
        android:layout_width="200sp"
        android:layout_height="60sp"
        android:layout_alignLeft="@+id/changemode"
        android:layout_below="@+id/changemode"
        android:layout_marginTop="16dp"
        android:text="@string/newCat"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/home"
        android:layout_width="200sp"
        android:layout_height="60sp"
        android:layout_alignLeft="@+id/newcategory"
        android:layout_below="@+id/newcategory"
        android:layout_marginTop="17dp"
        android:text="@string/home"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/quitmenu"
        android:layout_width="200sp"
        android:layout_height="60sp"
        android:layout_alignLeft="@+id/home"
        android:layout_below="@+id/home"
        android:layout_marginTop="20dp"
        android:text="@string/quit"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/retry"
        android:layout_width="200sp"
        android:layout_height="60sp"
        android:layout_below="@+id/menuTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:text="@string/retry"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>