<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Difficulty" >

    <TextView
        android:id="@+id/difficulty"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:gravity="center_horizontal"
        android:text="@string/difficulty"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ff0000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/hard"
        android:layout_width="175sp"
        android:layout_height="60sp"
        android:layout_above="@+id/back3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="54dp"
        android:text="@string/hard"
        android:textStyle="bold" />

    <Button
        android:id="@+id/medium"
        android:layout_width="175sp"
        android:layout_height="60sp"
        android:layout_above="@+id/hard"
        android:layout_alignLeft="@+id/hard"
        android:layout_marginBottom="34dp"
        android:text="@string/medium"
        android:textStyle="bold" />

    <Button
        android:id="@+id/easy"
        android:layout_width="175sp"
        android:layout_height="60sp"
        android:layout_above="@+id/medium"
        android:layout_alignLeft="@+id/medium"
        android:layout_marginBottom="40dp"
        android:text="@string/easy"
        android:textStyle="bold" />

    <Button
        android:id="@+id/back3"
        android:layout_width="175sp"
        android:layout_height="60sp"
        android:layout_alignLeft="@+id/hard"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="39dp"
        android:text="@string/back"
        android:textStyle="bold" />

</RelativeLayout>