<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Operation" >

    <TextView
        android:id="@+id/operatoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/operation"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ff0000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/subop"
        android:layout_width="200sp"
        android:layout_height="60sp"
        android:layout_below="@+id/operatoin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:text="@string/subtraction"
        android:textStyle="bold" />

    <Button
        android:id="@+id/back2"
        android:layout_width="200sp"
        android:layout_height="60sp"
        android:layout_alignLeft="@+id/divop"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="92dp"
        android:text="@string/back"
        android:textStyle="bold" />

    <Button
        android:id="@+id/divop"
        android:layout_width="200sp"
        android:layout_height="60sp"
        android:layout_above="@+id/back2"
        android:layout_alignLeft="@+id/subop"
        android:layout_marginBottom="58dp"
        android:text="@string/division"
        android:textStyle="bold" />

</RelativeLayout>