<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Home" >

    <TextView
        android:id="@+id/titleHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:gravity="center_horizontal"
        android:shadowColor="#59de3e"
        android:shadowDx="5.0"
        android:shadowDy="5.0"
        android:shadowRadius="10.0"
        android:text="@string/titleHome"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ff0000"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleHome2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/author"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#1df209"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/titleHome2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleHome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:gravity="center_horizontal"
        android:shadowColor="#787272"
        android:shadowDx="5.0"
        android:shadowDy="5.0"
        android:shadowRadius="10.0"
        android:text="@string/titleHome2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fcfcfc"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/start"
        android:layout_width="250sp"
        android:layout_height="70sp"
        android:layout_alignLeft="@+id/instruction"
        android:layout_below="@+id/author"
        android:layout_marginTop="30dp"
        android:text="@string/start"
        android:textColor="#1df209"
        android:textSize="30sp" 
        android:textStyle="bold"
        android:shadowColor="#59de3e"
        android:shadowDx="5.0"
        android:shadowDy="5.0"
        android:shadowRadius="15.0"/>

    <Button
        android:id="@+id/quit"
        android:layout_width="250sp"
        android:layout_height="70sp"
        android:layout_below="@+id/instruction"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/quit"
        android:textColor="#ff0000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/instruction"
        android:layout_width="250sp"
        android:layout_height="70sp"
        android:layout_alignLeft="@+id/quit"
        android:layout_below="@+id/start"
        android:layout_marginTop="26dp"
        android:text="@string/instruction"
        android:textSize="30sp"
        android:textStyle="bold" />

</RelativeLayout>