<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Instruction" >

    <TextView
        android:id="@+id/instructTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:shadowColor="#59de3e"
        android:shadowDx="5.0"
        android:shadowDy="5.0"
        android:shadowRadius="10.0"
        android:text="@string/instruction"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ff0000"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/instructMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instructTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:gravity="center_horizontal"
        android:text="@string/instructMessage"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/instructMessage3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/instructMessage2"
        android:layout_below="@+id/instructMessage2"
        android:layout_marginTop="13dp"
        android:gravity="center_horizontal"
        android:text="@string/instructMessage3"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20sp" 
        android:textColor="#1df209"/>

    <TextView
        android:id="@+id/instructMessage2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/instructMessage"
        android:layout_below="@+id/instructMessage"
        android:layout_marginTop="11dp"
        android:gravity="center_horizontal"
        android:text="@string/instructMessage2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20sp" />

    <Button
        android:id="@+id/back"
        android:layout_width="150sp"
        android:layout_height="55sp"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/instructMessage3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/back"
        android:textSize="25sp"
        android:textStyle="bold" />

</RelativeLayout>
